argoCD/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alone-christmas-app
  labels:
    app: alone-christmas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alone-christmas
  template:
    metadata:
      labels:
        app: alone-christmas
    spec:
      imagePullSecrets:
        - name: internal-harbor
      containers:
        - name: web
          image: registry.uniproject.jp/ayane/alone-christmas-site:1.0.1
          ports:
            - containerPort: 3000
