argoCD/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: alone-christmas.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: alone-christmas
                port:
                  number: 80
